Title text is not being displayed on mouseover
Categories
(Core :: Widget: Win32, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox125 | --- | unaffected |
| firefox126 | --- | unaffected |
| firefox127 | + | fixed |
People
(Reporter: dsmith, Assigned: emilio)
References
(Regression,
URL
)
Details
(Keywords: regression)
Attachments
(1 obsolete file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:127.0) Gecko/20100101 Firefox/127.0
Steps to reproduce:
Hover mouse cursor over an element with title text, such as an image, or the title on a YouTube video preview.
Actual results:
No title text displayed.
Expected results:
Title text should show up in a popup.
Comment 1•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Audio/Video: Playback' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Updated•2 years ago
|
Comment 2•2 years ago
|
||
I can reproduce Nightly1270.a1 Windows11.
STR
- open
data:text/html,<span title="bla bla">hover me</span> - Mouse hover the text
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=56770cf9b51ad1b01ef17f5393a56f4c08655e46&tochange=717a883474bedbbf5f420ffd52c76d3f6d4b910d
Updated•2 years ago
|
Comment 3•2 years ago
|
||
:emilio, since you are the author of the regressor, bug 1891063, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Comment 4•2 years ago
•
|
||
Also, the tooltips for toolbar buttons (such as Reload, Home etc) and bookmarks/history items do not appear.
| Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 5•2 years ago
|
||
Tooltips for open tabs do not show tab title
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 7•2 years ago
|
||
This restores the "repaint the world" code-path only for unaccelerated
windows, which apparently rely on it.
Updated•2 years ago
|
Comment 10•2 years ago
|
||
Comment 11•2 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 13•2 years ago
|
||
We also backed out the regressor.
Updated•2 years ago
|
Updated•1 year ago
|
Description
•