Bug 1894135 - Fix tooltip / unaccelerated transparent window rendering regression. r=win-reviewers,rkraesig

This restores the "repaint the world" code-path only for unaccelerated
windows, which apparently rely on it.

Differential Revision: https://phabricator.services.mozilla.com/D209035